--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">bellidoserranadrianapmdm03</string>
+
+    <string name="pokedex_view_card_view_image_description">Imagen del personaje</string>
+    <string name="captured_pokemon_view_card_view_image_description">Imagen del personaje</string>
+
+    <string name="pokedex_recycler_view_card_view_title">Titulo de la card view</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
