--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,11 @@
     <string name="captured_pokemon_view_card_view_image_description">Imagen del personaje</string>
 
     <string name="pokedex_recycler_view_card_view_title">Titulo de la card view</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <string name="tv_settings">AJUSTES</string>
+    <string name="btn_settings">Cerrar sesion</string>
+    <string name="bottom_nav_menu_captured_pokemon">Mis Pokemons</string>
+    <string name="bottom_nav_menu_pokedex">Pokedex</string>
+    <string name="bottom_nav_menu_settings">Ajustes</string>
 </resources>
