Set delete pokemon button visibility

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,9 @@
     <string name="settings_language">Language</string>
     <string name="menu_selectable_spanish">Spanish</string>
     <string name="menu_selectable_english">English</string>
+
+    <!-- Context menu -->
+    <string name="context_menu_about_me">About…</string>
+    <string name="context_menu_alert_dialog_text">App developed by Adriana Bellido Serran 1.0.</string>
+    <string name="context_menu_neutral_button">Close</string>
 </resources>
