--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -24,4 +24,9 @@
     <string name="settings_language">Idioma</string>
     <string name="menu_selectable_spanish">Español</string>
     <string name="menu_selectable_english">Inglés</string>
+
+    <!-- Context menu -->
+    <string name="context_menu_about_me">Acerca de…</string>
+    <string name="context_menu_alert_dialog_text">Aplicación desarrollada por Adriana Bellido Serrán. Versión 1.0.</string>
+    <string name="context_menu_neutral_button">Cerrar</string>
 </resources>
