--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -19,7 +19,7 @@
     <string name="pokemon_detail_height">Altura</string>
     <string name="pokemon_detail_weight">Peso</string>
     <string name="pokemon_detail_types_title">Tipo(s)</string>
-    <string name="settings_about_me">Acerca de...</string>
+    <string name="settings_about_me">Acerca de…</string>
     <string name="settings_delete_pokemon_switch">Eliminar mis pokémon</string>
     <string name="settings_language">Idioma</string>
     <string name="menu_selectable_spanish">Español</string>
