--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,8 @@
     <string name="context_menu_about_me">About me…</string>
     <string name="context_menu_alert_dialog_text">App developed by Adriana Bellido Serran 1.0.</string>
     <string name="context_menu_neutral_button">Close</string>
+    <string name="context_menu_log_out_text">Are you sure you want to log out?</string>
+    <string name="context_menu_log_out_positive_button">Yes</string>
+    <string name="context_menu_log_out_negative_button">No</string>
+
 </resources>
